--- a/style/index.css
+++ b/style/index.css
@@ -3,6 +3,18 @@
     color: var(--dark);
 }
 
+h2 {
+    font-family: "Poetsen One", sans-serif;
+    font-size: var(--large);
+    text-align: center;
+    margin-bottom: var(--xlarge);
+}
+
+h3 {
+    font-size: var(--medium);
+    font-weight: 600;
+    margin-bottom: var(--regular);
+}
 .btn {
     display: inline-block;
     font-size: var(--regular);
@@ -10,7 +22,23 @@
     text-decoration: none;
     background-color: var(--contrast3);
     padding: var(--small) var(--medium);
+    border-radius: var(--large);
+}
+
+.card {
+    background-color: var(--bright);
     border-radius: var(--regular);
+    box-shadow: 4px 4px 4px grey;
+}
+
+.contact-btn {
+    background-color: var(--contrast1);
+    color: var(--bright);
+}
+
+.contact-btn:hover {
+    background-color: var(--contrast3);
+    color: var(--dark);
 }
 
 /* Hero */
@@ -59,12 +87,98 @@
     box-shadow: 4px 4px 4px grey;
 }
 
-.hero-btn:hover {
-    background-color: var(--contrast2);
-}
 
 .hero-image {
     width: 250px;
     box-shadow: 4px 4px 4px grey;
     border-radius: var(--small);
+}
+
+/* Services */
+
+.services-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-bottom: var(--xxxlarge);
+    gap: var(--large);
+    justify-content: space-around;
+}
+
+.services-card {
+    padding: var(--large);
+    width: 25%;
+}
+
+.services-card p {
+    margin-bottom: var(--small);
+}
+
+/* Portfolio */
+
+.portfolio-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: var(--large);
+    background: radial-gradient(closest-side, var(--contrast3), transparent);
+    margin-bottom: var(--xxxlarge);
+}
+
+.portfolio-card {
+    overflow: hidden;
+    box-shadow: 0px 0px 12px grey;
+    max-width: 50%;
+}
+
+.portfolio-card-screenshot {
+    width: 100%;
+    height: 25rem;
+    overflow: hidden;
+    border-radius: var(--regular) var(--regular) 0 0;
+    box-shadow:  0px 4px 8px grey;
+}
+
+.portfolio-card-screenshot img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.portfolio-card-content {
+    margin: var(--large);
+}
+
+.taglist {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: var(--regular);
+    margin-bottom: var(--regular);
+}
+
+.taglist li {
+    font-weight: 600;
+    font-size: small;
+    background-color: var(--dark);
+    color: var(--bright);
+    border-radius: var(--large) var(--regular) var(--regular) var(--large);
+    padding: 0.25rem 0.5rem 0.25rem var(--regular);
+    box-shadow: 4px 4px 4px grey;
+}
+
+.portfolio-card-content p {
+    margin-bottom: var(--small);
+}
+
+.portfolio-card-btn {
+    font-weight: 400;
+    margin-top: var(--small);
+    background-color: var(--contrast2);
+    box-shadow: 4px 4px 4px grey;
+}
+
+.portfolio-card-btn:hover {
+    background-color: var(--contrast3);
 }
