--- a/style/style.css
+++ b/style/style.css
@@ -19,13 +19,14 @@
 
 /*** Default style ***/
 
+/***** General ******/
+* {
+    color: var(--dark);
+}
+
 body {
     font-family: "Montserrat", sans-serif;
     background-color: white;
     line-height: var(--medium);
 }
 
-main {
-    max-width: 1280px;
-    margin: auto;
-}
