--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
 
 :root {
     /* Colors */
-    --bright: #e8f0ff;
+    --bright: #eeeeee;
     --dark: #222725;
     --contrast1: #db5a42;
     --contrast2: #83c5be;
